# VirtualLandRegistry

./: .gitignore  Cargo.toml  DEMO_GUIDE.md  DEPLOYMENT.md  LICENSE  README.md  RESTART_INSTRUCTIONS.md  dfx.json  project.json
backend/asset_canister/: Cargo.toml  asset_canister.did  land_registry.did
backend/asset_canister/src/: lib.rs
backend/auth_canister/: Cargo.toml  auth_canister.did
backend/auth_canister/src/: lib.rs
backend/marketplace_canister/: Cargo.toml  marketplace_canister.did
backend/marketplace_canister/src/: lib.rs
frontend/: .env.example  build-simple.sh  index.html  package.json  tailwind.config.js  test.html  vite.config.js
frontend/src/: App-full.jsx  App-simple.jsx  App-with-auth.jsx  App-working.jsx  App.jsx  index.css
frontend/src/components/: Navbar.jsx  ProtectedRoute.jsx
frontend/src/pages/: Dashboard.jsx  LandDetails.jsx  Login.jsx  Marketplace.jsx  MyLands.jsx  RegisterLand.jsx  VerifyLand.jsx
frontend/src/services/: AuthContext.jsx  canisterService.js  canisterService.js.backup
frontend/src/utils/: helpers.js
